Fix: hidden icon doesn't line up with tab label in Sticky mode
The problem is caused by the scrollbar on sticky mode, it reduces the
available space to make the icon and label appear with the specified
padding, so to fix it, this PS reduces the padding when the scrollbar
appears to make both elements fit properly

fixes: LS-2856
flag= none

Test plan:

- Turn on the Sticky Left navigation feature option at the site admin
level
- Go to a course settings page
- Make the window small enough for the scroll bar to appear
- Notice in the course navigation that the hidden icon in the Announcements
tab is properly aligned with the label

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/280423
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
Product-Review: Jonathan Guardado <jonathan.guardado@instructure.com>
QA-Review: Luis Oliveira <luis.oliveira@instructure.com>

--- a/app/stylesheets/base/_ic_app_layout.scss
+++ b/app/stylesheets/base/_ic_app_layout.scss
@@ -298,6 +298,13 @@ body:not(.course-menu-expanded) {
   overscroll-behavior-y: contain;
 }
 
+.ic-sticky-frame.has-scrollbar {
+  padding: direction-sides($ic-sp*2 $ic-sp*0.2 $ic-breadcrumbs-height $ic-sp*2);
+  & .nav-icon{
+      padding: 0 3px;
+  }
+}
+
 .ic-app-nav-toggle-and-crumbs {
   display: flex;
   align-items: center;
